--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                                     <h4 className="font-semibold text-green-100 mb-3 flex items-center gap-2">
                                         5-Minute Mobility
                                         <a 
-                                            href="https://www.youtube.com/watch?v=2kZhsUm8CeA" 
+                                            href="https://www.youtube.com/watch?v=-tetoszaTTo&list=PLXi7slewxuMILJOu0uE4EGLuSA28LXsKi" 
                                             target="_blank" 
                                             rel="noopener noreferrer"
                                             className="text-xs bg-green-500/30 px-2 py-1 rounded text-green-200 hover:text-green-100"
@@ -392,7 +392,7 @@
                                     <h4 className="font-semibold text-purple-100 mb-3 flex items-center gap-2">
                                         KOT Quick Hits
                                         <a 
-                                            href="https://www.youtube.com/watch?v=Ht4Z2Ql9c_o" 
+                                            href="https://www.youtube.com/shorts/QYSynPIxIg0" 
                                             target="_blank" 
                                             rel="noopener noreferrer"
                                             className="text-xs bg-purple-500/30 px-2 py-1 rounded text-purple-200 hover:text-purple-100"
